# wireguard-zephyr

./: CMakeLists.txt  Kconfig  README.md  README.rst  prj.conf  sample.yaml
src/: dhcpc.c  wg_main.c  wg_tun.c  wireguardif.c  wireguardif.h
